--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           <div class="col-md-6 mb-5 mb-lg-0 text-center">
             <h4 class="text-uppercase mb-4">Email</h4>
             <p class="lead mb-0">
-              Info: <a title="Send an email for general information about our club" href="mailto:poquoson-wcrentals@gmail.com">info@poquosonwomansclub.com</a>
+              Info: <a title="Send an email for general information about our club" href="mailto:info@poquosonwomansclub.com">info@poquosonwomansclub.com</a>
               <br />
-              Rentals: <a title="Send an email to inquire about renting our clubhouse" href="mailto:poquoson-wcrentals@gmail.com">rentals@poquosonwomansclub.com</a>
+              Rentals: <a title="Send an email to inquire about renting our clubhouse" href="mailto:rentals@poquosonwomansclub.com">rentals@poquosonwomansclub.com</a>
             </p>
           </div>
         </div>
