--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="row">
           <div class="col-md-6 mb-5 mb-lg-0 text-center">
             <h4 class="text-uppercase mb-4">Phone</h4>
-            <p class="lead mb-0">(757) 751–0262</p>
+            <p class="lead mb-0">Call or text (757) 751–0262</p>
           </div>
           <div class="col-md-6 mb-5 mb-lg-0 text-center">
             <h4 class="text-uppercase mb-4">Email</h4>
