--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto">
             
-              If you would like to rent the Poquoson Woman's Club please call or text (757) 751-0262. 
+              If you would like to rent the Poquoson Woman's Club please call or text <strong>(757) 751-0262</strong>. 
               We'll get back to you within 24 - 48 hours. Please include the date you’re interested in reserving in the message.
            
           </div>
