--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">The Poquoson Woman’s Club meets on the third Wednesday of each month, September to May at the Clubhouse on 9 Cedar Road, Poquoson, VA 23662. We are a group of women doing fun activities to improve the welfare of our community. Please come and check us out!</p>
+            <p class="lead">The Poquoson Woman’s Club meets on the third Thursday of each month, September through May at the Clubhouse on 9 Cedar Road, Poquoson, VA 23662. We are a group of women doing fun activities to improve the welfare of our community. Please come and check us out!</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">The mission of this organization shall be to promote through common interests, the cultural, educational, philanthropic and environmental welfare of the community.</p>
