--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </div>
           <div class="col-md-4">
             <h4 class="text-uppercase mb-4">Google Drive</h4>
-            <p class="lead mb-0">PWC will use Google Drive to share files among members and the general public.
+            <p class="lead mb-0">PWC uses Google Drive to share files among members and the general public.
               <a href="https://drive.google.com/drive/shared-with-me">Go to Google Drive</a></p>
               <br />
               To use Google Drive you’ll need a free <a href="https://gmail.com">Google email account</a>.
